--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://192.168.10.250:3306/sakila
 spring.datasource.username=hamartin
 spring.datasource.password=hamartin
+
+server.port=${PORT:8080}
