--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://192.168.10.250:3306/sakila
-spring.datasource.username=hamartin
-spring.datasource.password=hamartin
+spring.datasource.url=${DB_URL:jdbc:mysql://192.168.10.250:3306/sakila}
+spring.datasource.username=${DB_USERNAME:hamartin}
+spring.datasource.password=${DB_PASSWORD:hamartin}
 
 server.port=${PORT:8080}
